<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="status">Status</string>
    <string name="type">Type</string>
    <string name="language">Language</string>
    <string name="overview">Overview</string>
    <string name="seasons">Seasons</string>
    <string name="next_episode">Next Episode !</string>
    <string name="last_episode">Last Episode</string>
    <string name="images">Images</string>
    <string name="run_time">Run Time</string>
    <string name="secondary_text">Episode %1$d (%2$s)</string>
    <string name="display_error">Failed to load resource. Try Again ?</string>
    <string name="added_to_favorite">Added to Favorite</string>
    <string name="removed_from_favorite">Removed from Favorite</string>
    <string name="favorite_menu">Favorite Menu</string>
</resources>