<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toStartOf="@+id/text_title_stop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Monster Hunter" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/text_title_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="75dp" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/rating_bar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:rating="4.3" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/vote_average_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/rating_bar"
            app:layout_constraintStart_toEndOf="@+id/rating_bar"
            app:layout_constraintTop_toTopOf="@+id/rating_bar"
            tools:text="(4.8)" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/rating_bar"
            app:layout_constraintTop_toBottomOf="@+id/rating_bar"
            tools:layout_height="80dp">

        </com.google.android.material.chip.ChipGroup>

        <View
            android:id="@+id/container_view1"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/container_view2"
            app:layout_constraintEnd_toStartOf="@+id/container_view2"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/container_view2" />

        <View
            android:id="@+id/container_view2"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/container_view3"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/container_view1"
            app:layout_constraintTop_toBottomOf="@+id/genres" />

        <View
            android:id="@+id/container_view3"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/container_view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/container_view2"
            app:layout_constraintTop_toTopOf="@+id/container_view2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/status_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/divider1"
            app:layout_constraintStart_toStartOf="@+id/container_view1"
            app:layout_constraintTop_toTopOf="@+id/container_view1"
            android:text="@string/status" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/status_title"
            app:layout_constraintStart_toStartOf="@+id/status_title"
            app:layout_constraintTop_toBottomOf="@+id/status_title"
            tools:text="Released\n(21-11-2001)" />

        <View
            android:id="@+id/divider1"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:background="@drawable/item_divider"
            app:layout_constraintBottom_toBottomOf="@+id/container_view1"
            app:layout_constraintEnd_toEndOf="@+id/container_view1"
            app:layout_constraintStart_toEndOf="@+id/container_view1"
            app:layout_constraintTop_toTopOf="@+id/container_view1" />

        <View
            android:id="@+id/divider2"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:background="@drawable/item_divider"
            app:layout_constraintBottom_toBottomOf="@+id/container_view2"
            app:layout_constraintEnd_toEndOf="@+id/container_view2"
            app:layout_constraintStart_toEndOf="@+id/container_view2"
            app:layout_constraintTop_toTopOf="@+id/container_view2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvshow_type_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/divider2"
            app:layout_constraintStart_toStartOf="@+id/divider1"
            app:layout_constraintTop_toTopOf="@+id/status_title"
            android:text="@string/type" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvshow_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="Miniseries"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/divider2"
            app:layout_constraintStart_toStartOf="@+id/divider1"
            app:layout_constraintTop_toBottomOf="@+id/tvshow_type_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/language_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/container_view3"
            app:layout_constraintStart_toEndOf="@+id/divider2"
            app:layout_constraintTop_toTopOf="@+id/tvshow_type_title"
            android:text="@string/language" />

        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="English"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/language_title"
            app:layout_constraintStart_toStartOf="@+id/language_title"
            app:layout_constraintTop_toTopOf="@+id/tvshow_type" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/overview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/container_view1"
            app:layout_constraintTop_toBottomOf="@+id/container_view1"
            android:text="@string/overview" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="12sp"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eu dignissim erat, ac tristique sapien. Pellentesque in dolor vel diam finibus faucibus. Fusce in purus semper, lacinia nunc ac, scelerisque tortor. Cras pulvinar tincidunt justo, id aliquam dolor commodo vel. Mauris a efficitur tellus, ut fringilla est. Donec porta leo at felis semper, eget porttitor sem facilisis. Suspendisse id neque nec lacus imperdiet viverra ac et urna. Cras cursus molestie ante sit amet eleifend. Aliquam et nulla et elit fringilla vehicula at vitae lacus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/overview_title"
            app:layout_constraintTop_toBottomOf="@+id/overview_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/season_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/overview"
            app:layout_constraintTop_toBottomOf="@+id/overview"
            android:text="@string/seasons" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/seasons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            tools:listitem="@layout/item_seasons"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/season_title"
            app:layout_constraintTop_toBottomOf="@+id/season_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/next_episode_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/seasons"
            app:layout_constraintTop_toBottomOf="@+id/seasons"
            android:text="@string/next_episode" />

        <FrameLayout
            android:id="@+id/next_episode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="8dp"
            tools:layout_height="240dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/next_episode_title"
            app:layout_constraintTop_toBottomOf="@+id/next_episode_title">

<!--            <include layout="@layout/item_episode_container" />-->
        </FrameLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/last_episode_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/next_episode"
            app:layout_constraintTop_toBottomOf="@+id/next_episode"
            android:text="@string/last_episode" />

        <FrameLayout
            android:id="@+id/last_episode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="8dp"
            tools:layout_height="240dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/last_episode_title"
            app:layout_constraintTop_toBottomOf="@+id/last_episode_title">

<!--            <include layout="@layout/item_episode_container" />-->
        </FrameLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/images_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            android:text="@string/images"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_episode" />

        <FrameLayout
            android:id="@+id/images_frame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="8dp"
            tools:layout_height="240dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/images_title"
            app:layout_constraintTop_toBottomOf="@+id/images_title">

<!--            <include layout="@layout/card_backdrop_image" />-->
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>